# cfs-third-parties

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  Dependencies.txt  HowTo.txt  README.md
src/main/cpp/: CMakeLists.txt
src/main/cpp/apache-logging-log4cxx/: CMakeLists.txt
src/main/cpp/apr-2.0/: CHANGES  CMakeLists.txt  LICENSE  Makefile.in  Makefile.win  NOTICE  NWGNUmakefile  README  README.cmake  SConscript  SConstruct  STATUS  apr.dsp  apr.dsw  build.conf  buildconf  configure.in  libapr.dsp  libapr.rc
src/main/cpp/apr-2.0/.svn/: wc.db
src/main/cpp/apr-2.0/buckets/: apr_brigade.c  apr_buckets.c  apr_buckets_alloc.c  apr_buckets_eos.c  apr_buckets_file.c  apr_buckets_flush.c  apr_buckets_heap.c  apr_buckets_mmap.c  apr_buckets_pipe.c  apr_buckets_pool.c  apr_buckets_refcount.c  apr_buckets_simple.c  apr_buckets_socket.c
src/main/cpp/apr-2.0/crypto/: apr_crypto.c  apr_crypto_commoncrypto.c  apr_crypto_nss.c  apr_crypto_openssl.c  apr_md4.c  apr_md5.c  apr_passwd.c  apr_sha1.c  apr_siphash.c  getuuid.c  uuid.c
src/main/cpp/apr-2.0/dbd/: NWGNUdbdmysql  NWGNUdbdpgsql  NWGNUdbdsqli2  NWGNUdbdsqli3  NWGNUmakefile  apr_dbd.c  apr_dbd_mysql.c  apr_dbd_mysql.dsp  apr_dbd_odbc.c  apr_dbd_odbc.dsp  apr_dbd_oracle.c  apr_dbd_oracle.dsp  apr_dbd_pgsql.c  apr_dbd_pgsql.dsp  apr_dbd_sqlite2.c  apr_dbd_sqlite2.dsp  apr_dbd_sqlite3.c  apr_dbd_sqlite3.dsp
src/main/cpp/apr-2.0/dbm/: NWGNUdbmdb  NWGNUdbmgdbm  NWGNUmakefile  (+7 more)
src/main/resources/cmake/: CPackConfig.cmake  CPackSourceConfig.cmake
src/main/resources/configs/: AppInfo.hpp.in  CPPLINT.cfg  Defines.hpp.in  Error.json  ErrorList.cfg  GitRevision.hpp.in  Version.cpp.in  Version.hpp.in  cfs-edac-config  config.cmake.in  cpp101-style.cfg  cppbdd101-config  edacConfig.hpp.in  log4cxx.properties  log4cxx.xml
src/main/resources/scripts/: cppcheck-htmlreport.py
src/main/resources/toolchains/: Toolchain-Raspberrypi.cmake
(+279 files in other folders)
